--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     
     <div id="container">
-        <button id="addButton">Buton Ekle</button>
+        <button id="addButton">Button</button>
     </div>
     <script src="app.js"></script>
 </body>
